Faltan un par de cosas sobre como se crean los criterios, pero el funcionamiento está