@@ -14,35 +14,28 @@ import unq.tpi.persistencia.daos.SessionManager;
 
 public class Busqueda extends Entidad {
 
-	private List<CriterioDeBusqueda> criterios = new ArrayList<CriterioDeBusqueda>();
+	private Criterio criterioDeBusqueda;
 	
-	public void agregarCriterio(CriterioDeBusqueda nuevoCriterio) throws PrimerCriterioDebeSerSinConectorException, SoloPrimerCriterioDebeSerSinConectorException{
-		if (this.criterios.size() == 0 && nuevoCriterio.getClass() == CriterioConConector.class){
-			throw new PrimerCriterioDebeSerSinConectorException();
-		}
-		if (this.criterios.size() > 0 && nuevoCriterio.getClass() == Criterio.class){
-			throw new SoloPrimerCriterioDebeSerSinConectorException();
-		}
-		
-		this.criterios.add(nuevoCriterio);
+	// Metodos de modificacion de los criterios de busqueda
+	
+	public void andCriterio(Criterio nuevoCriterio){
+		criterioDeBusqueda.and(nuevoCriterio);
 	}
 	
+	public void orCriterio(Criterio nuevoCriterio){
+		criterioDeBusqueda.or(nuevoCriterio);
+	}
+
 	public void eliminarUltimoCriterio() throws NoSePuedeEliminarCriterioDeBusquedaException{
-		if (this.criterios.size() == 0){
-			throw new NoSePuedeEliminarCriterioDeBusquedaException();
-		}
-		this.criterios.remove(this.criterios.size() - 1);
+		criterioDeBusqueda.removeLast();
 	}
 	
+	// Ejecuta la query en la base de datos con los criterios dados
 	public List<Vuelo> ejecutar(){
-		String criterios = "";
-		for (CriterioDeBusqueda criterio : this.criterios){
-			criterios.concat(" ");
-			criterios.concat(criterio.getCriterio());
-		}
+		
 		
 		String query = "from Vuelos where ";
-		query.concat(criterios);
+		query.concat(criterioDeBusqueda.getCriterio());
 			
 		Query q= SessionManager.getSession().createQuery(query);
 		List<Vuelo> busqueda = q.list();
